--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     </section>
 
 <div class="container">
-    <div style="text-align: center; font-family: monospace; padding: 60px;  font-size: 33px; color:#BDB2FF;">
-	  <p>Be enough for yourself first,</p>
-			    <ul>
+    <div style="animation: change 7s infinite; text-align: center; font-family: monospace; padding: 60px;  font-size: 33px; color:#BDB2FF;">
+	  <p>Be enough,</p>
+	       <ul>
       <li>for yourself first</li>
       <li>the rest of the world</li>
 				      <li>can wait</li>
