--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </section>
 
 <div class="container">
-    <div style="animation: change 7s infinite; text-align: center; font-family: monospace; padding: 60px;  font-size: 33px; color:#BDB2FF;">
+    <div style="animation:"change 7s infinite; text-align: center; font-family: monospace; padding: 60px;  font-size: 33px; color:#BDB2FF;">
 	  <p>Be enough,</p>
 	     <ul>
       <li>for yourself first</li>
