--- a/index.html
+++ b/index.html
@@ -36,14 +36,9 @@
         </div>
     </section>
 
-<div class="container">
-    <div style="animation:"change 7s infinite; text-align: center; font-family: monospace; padding: 60px;  font-size: 33px; color:#BDB2FF;">
-	  <p>Be enough,</p>
-	     <ul>
-      <li>for yourself first</li>
-      <li>the rest of the world</li>
-			  <li>can wait</li>
-	             </ul>
+<div>
+    <div style="text-align: center; font-family: monospace; padding: 60px;  font-size: 33px; color:#BDB2FF;">
+	  Be enough for yourself first,the rest of the world can wait
 		</div>
 
 
