--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
 
 <div class="container">
+	<div style="animation: cambiar 7s infinite; text-align: center; font-family: monospace; padding: 60px;  font-size: 33px; color:#BDB2FF;">
 	 <p>Hola</p>
 	   <ul>
       <li>mundo</li>
