--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     </section>
 
 <div>
-    <div style="text-align: center; font-family: monospace; padding: 60px;  font-size: 33px; color:#BDB2FF;">
-	  Be enough for yourself first,the rest of the world can wait
+    <div style="text-align: center; font-family: fantasy; padding: 90px;  font-size: 60px; color:#BDB2FF;">
+	    <em>Be enough for yourself first,the rest of the world can wait</em>
 		</div>
 
     <!-- Bio -->
