--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
     </section>
 
 <div>
+  <TABLE BORDER=1>
+    <TR><TD>
+<MARQUEE> Marquesina dentro de una tabla </MARQUEE>
+  </TD></TR>
+</TABLE>
     <div style="text-align: center; font-family: fantasy; padding: 90px;  font-size: 60px; color:#BDB2FF;">
 	    <em>Be enough for yourself first,the rest of the world can wait</em>
 		</div>
