--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     </section>
 
 <div>
-  <TABLE BORDER=1>
+  <TABLE BORDER="1">
     <TR><TD>
-<MARQUEE> Marquesina dentro de una tabla </MARQUEE>
+<marquee>"Marquesina dentro de una tabla"</marquee>
   </TD></TR>
 </TABLE>
     <div style="text-align: center; font-family: fantasy; padding: 90px;  font-size: 60px; color:#BDB2FF;">
