--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
     </section>
 
 <div>
-  <TABLE BORDER="1">
+ <div style="text-align: center; font-family: fantasy; padding: 90px;  font-size: 60px; color:#BDB2FF;">
+   <TABLE BORDER="1">
     <TR><TD>
-<marquee>"Marquesina dentro de una tabla"</marquee>
+<marquee>"Be enough for yourself first,the rest of the world can wait"</marquee>
   </TD></TR>
 </TABLE>
-    <div style="text-align: center; font-family: fantasy; padding: 90px;  font-size: 60px; color:#BDB2FF;">
-	    <em>Be enough for yourself first,the rest of the world can wait</em>
-		</div>
+   
+	   
 
     <!-- Bio -->
     <section id="about" class="parallax">
