--- a/index.html
+++ b/index.html
@@ -35,7 +35,12 @@
      
         </div>
     </section>
-	   
+
+  <marquee direction="down" width="250" height="200" behavior="alternate" style="border:solid">
+    <marquee behavior="alternate">
+     Be enough yoursefl first, the rest of the world can wait
+  </marquee>
+</marquee>
 
     <!-- Bio -->
     <section id="about" class="parallax">
