--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
     </section>
 
-  <marquee direction="down" width="250" text-align: center; height="200" behavior="alternate" style="border:solid">
+  <marquee direction="down" width="400" text-align: center; height="150" font-family: fantasy; behavior="alternate" style="border:solid">
     <marquee behavior="alternate">
      Be enough yoursefl first, the rest of the world can wait
   </marquee>
