--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
     </section>
 
-  <marquee direction="down" width: 400px; text-align: center; height: 150px; font-family: fantasy; behavior=alternate; style="border:solid">
+  <marquee direction="down" width: 400px; text-align: center; height: 150px; font-family: fantasy; behavior:alternate; style:border:solid  margin: 67px;">
     <marquee behavior="alternate">
      Be enough yoursefl first, the rest of the world can wait
   </marquee>
