--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
     </section>
 
-  <marquee direction="down" width="400" height="200" behavior="alternate" style="border:solid">
+  <marquee direction="down" width="400" height="200" behavior="alternate" font-family="fantasy" color="#BDB2FF" margin="30px" style="border:solid">
     <marquee behavior="alternate">
      Be enough yoursefl first, the rest of the world can wait
   </marquee>
