--- a/index.html
+++ b/index.html
@@ -36,11 +36,10 @@
         </div>
     </section>
 
-  <marquee direction="down" width="400" height="200" behavior="alternate" font-family="fantasy" color="#BDB2FF" margin="30px" style="border:solid">
-    <marquee behavior="alternate">
-     Be enough yoursefl first, the rest of the world can wait
-  </marquee>
-</marquee>
+ <div>
+     <div style="text-align: center; font-family: fantasy; padding: 90px; font-size: 60px; color:#BDB2FF; border-style: double; border-width: 10px; border-color: lightseagreen;">
+              <em>Be enough for yourself, the rest of the worl can wait</em>
+                 </div>
 
     <!-- Bio -->
     <section id="about" class="parallax">
