--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </section>
 
  <div>
-     <div style="text-align: center; font-family: fantasy; padding: 90px; font-size: 60px; color:#BDB2FF; border-style: double; border-width: 10px; border-color: lightseagreen;">
+     <div style="font-family: fantasy; font-size: 60px; color:#BDB2FF; border-style: double; border-width: 10px; border-color: lightseagreen;">
               <em>Be enough for yourself, the rest of the worl can wait</em>
                  </div>
 
