--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
  <div>
      <div style="font-family: fantasy; color:#BDB2FF; border-style: double; border-width: 10px; border-color: lightseagreen;">
-              <em>Be enough for yourself, the rest of the worl can wait</em>
+              Be enough for yourself, the rest of the worl can wait
                  </div>
 
     <!-- Bio -->
