--- a/index.html
+++ b/index.html
@@ -36,10 +36,9 @@
         </div>
     </section>
 
- <div>
-     <div style="font-family: fantasy; color:#BDB2FF; border-style: double; border-width: 10px; border-color: lightseagreen;">
-              Be enough for yourself, the rest of the worl can wait
-                 </div>
+ <div style="text-align: center; font-size: 45px; padding: 8%; background-color: #CBF3F0;">
+     Be enough for yourself, the rest of the worl can wait
+     </div>
 
     <!-- Bio -->
     <section id="about" class="parallax">
