--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         </div>
     </section>
 
- <div style="text-align: center; font-size: 45px; padding: 8%; background-color: #CBF3F0;">
-     Be enough for yourself, the rest of the worl can wait
+ <div style="text-align: center; font-size: 45px; padding: 8%; font-family: fantasy; border-color: #CBF3F0; border-style: double; border-width: 15px; font-style  margin: 7%; color: #00BBF9;">
+     "Be enough for yourself, the rest of the worl can wait"
  </div>
 
     <!-- Bio -->
