--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </section>
 
  <div style="text-align: center; font-size: 45px; padding: 8%; font-family: fantasy; border-color: #CBF3F0; border-style: double; border-width: 15px; font-style  margin: 7%; color: #00BBF9;">
-     "Be enough for yourself, the rest of the worl can wait"
+     "Be enough for yourself first, the rest of the world can wait"
  </div>
 
     <!-- Bio -->
