--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
     </section>
 
- <div style="text-align: center; font-size: 45px; padding: 8%; font-family: fantasy;  margin: 7%; color: #00BBF9;">
+ <div style="text-align: center; font-size: 45px; padding: 8%; font-family: fantasy;  margin: 5; color: #00BBF9;">
      "Be enough for yourself first, the rest of the world can wait"
  </div>
 
