--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
     </section>
 
  <div style="text-align: center; font-size: 45px; padding: 8%; font-family: fantasy;  margin: 5; font-style: oblique; color: #00BBF9;">
-    <marquee width: 50px; height: 60px; align:bottom>Be enough for yourself first, the rest of "The world can wait"</marquee> The world can wait
+    <marquee align:bottom>Be enough for yourself first, the rest of "The world can wait"</marquee> 
+     The world can wait
  </div>
 
 
