--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@
         </div>
     </section>
 
- <div style="text-align: center; font-size: 45px; padding: 8%; font-family: fantasy;  margin: 5; font-style: oblique; color: #00BBF9;">
+ <div style="text-align: center;  padding: 8%;  font-family: cursive; font-style: oblique; color: #00BBF9;">
     <marquee align:bottom>Be enough for yourself first, the rest of "The world can wait"</marquee> 
-     The world can wait
  </div>
 
 
