--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         </div>
     </section>
 
- <div style="text-align: center;  padding: 8%;  font-family: cursive; font-style: oblique; color: #00BBF9;">
-    <marquee align:bottom>Be enough for yourself first, the rest of "The world can wait"</marquee> 
+ <div style="text-align: center;  padding: 8%; font-size: 50px; font-family: cursive; font-style: oblique; color: #00BBF9;">
+    <marquee width:50%; height:30px; align:bottom>Be enough for yourself first, the rest of "The world can wait"</marquee> 
  </div>
 
 
