--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 
  <div style="text-align: center;  padding: 8%; font-size: 50px; font-family: cursive; font-style: oblique; color: #00BBF9;">
     <marquee width:50%; height:30px; align:bottom>Be enough for yourself first, the rest of "The world can wait"</marquee> 
+                                                                     "The world can wait"
+     
  </div>
 
 
