--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <section id="quote" class="parallax">
          <p>   
               <div style="background-color: #CBF3F0;padding: 20px;text-decoration-style: wavy;animation-name: text-flicker-in-glow;"> 
-              <marquee behavior="alternate"><span>GEMINI POWER &#9802; !</span></marquee>
+              <marquee behavior="alternate"><span>GEMINI POWER!</span></marquee>
         </p>
         
         <p> 
