--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
                </div>
             </div>
          
-        <div style="padding: 3%; text-align: left; font-size: 24px; background: -webkit-linear-gradient(60deg, #ffc780, #d59cbf,#d374b4,#b4c4ab,#08eb89, #05bf90);">
+        <div style="padding: 3%; text-align: left; margin: 2%; font-size: 24px; background: -webkit-linear-gradient(60deg, #ffc780, #d59cbf,#d374b4,#b4c4ab,#08eb89, #05bf90);">
             <form action="/action_page.php"> 
-                  <label for="LOVE">What do you love?:</label><br>
+                  <label for="LOVE">What do you love?</label><br>
                   <input type="checkbox" id="love1" name="love1" value="Cat">
                   <label for="love1">Cats</label><br>
                   <input type="checkbox" id="love2" name="love2" value="Dog">
