--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     
     <section id="quote" class="parallax">
          <p>   
-              <div style="background-color: #CBF3F0;padding: 20px;text-decoration-style: wavy;animation-name: text-flicker-in-glow; font-size: 72px; background: -webkit-linear-gradient(#feb67d, #e296c3 ); -webkit-background-clip: text; -webkit-text-fill-color: transparent;"> 
+              <div style="background-color: #CBF3F0;padding: 20px;text-decoration-style: wavy;animation-name: text-flicker-in-glow; font-size: 72px; background: -webkit-linear-gradient(#feb67d, #e296c3 );"> 
               <marquee behavior="alternate"><span>GEMINI POWER!</span></marquee>
         </p>
         
