--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                </div>
             </div>
          
-        <div style="padding: 3%; text-align: left; margin: 2%; font-size: 24px; background: -webkit-linear-gradient(60deg, #ffc780, #d59cbf,#d374b4,#b4c4ab,#08eb89, #05bf90);">
+        <div style="padding: 3%; text-align: left; margin: 2%; width: 300px; font-size: 24px; background: -webkit-linear-gradient(60deg, #ffc780, #d59cbf,#d374b4,#b4c4ab,#08eb89, #05bf90);">
             <form action="/action_page.php"> 
                   <label for="LOVE">What do you love?</label><br>
                   <input type="checkbox" id="love1" name="love1" value="Cat">
