--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
  <div style="text-align: center;  padding: 8%; font-size: 50px; font-family: cursive; font-style: oblique; color: #00BBF9;">
      <marquee behavior="scroll" direction="left"><img src="/Trying/img/mariposaa.gif" width="400" height="238" alt="Mariposa flying" /></marquee>
-    <marquee width:50%; height:30px; align:bottom>Be enough for yourself first, the rest of "The &#127757; can wait"</marquee> 
-                                                          "The &#127757; can wait"
+    Be enough for yourself first, the rest of "The &#127757; can wait"
+                                                    
      
     </div>
 
