--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
  <div style="text-align: center;  padding: 8%; font-size: 50px; font-family: cursive; font-style: oblique; color: #00BBF9;">
      <marquee behavior="scroll" direction="left"><img src="/Trying/img/mariposaa.gif" width="400" height="238" alt="Mariposa flying" /></marquee>
-    Be enough for yourself first, the rest of "The &#127757; can wait"
+    Be enough for yourself first, the rest of the &#127757; can wait
                                                     
      
     </div>
