--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 
 
  <p>
+   <div style="text-align: center;  padding: 8%; font-size: 50px; font-family: initial; font-style: oblique; color: #00BBF9;">
      Be enough for yourself first, the rest of the &#127757; can wait
-                                                    
-     
+      </div>                                               
     </p>
 
 
