--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
         </div>
     </section>
 
- <div style="text-align: center;  padding: 8%; font-size: 50px; font-family: initial; font-style: oblique; color: #00BBF9;">
+ <div style="text-align: center; font-size: 50px; font-family: initial; font-style: oblique; color: #00BBF9;">
      <marquee behavior="scroll" direction="left"><img src="/Trying/img/mariposaa.gif" width="400" height="238" alt="Mariposa flying" /></marquee>
  </div>
 
 
  <p>
-   <div style="text-align: center;  padding: 8%; font-size: 50px; font-family: initial; font-style: oblique; color: #00BBF9;">
+   <div style="text-align: center; font-size: 50px; font-family: initial; font-style: oblique; color: #00BBF9;">
      Be enough for yourself first, the rest of the &#127757; can wait
       </div>                                               
     </p>
