--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
     </section>
 
- <div style="text-align: center; font-size: 50px; font-family: initial; font-style: oblique; color: #00BBF9;">
+ <div style="text-align: center; font-family: initial; font-style: oblique; color: #00BBF9;">
      <marquee behavior="scroll" direction="left"><img src="/Trying/img/mariposaa.gif" width="400" height="238" alt="Mariposa flying" /></marquee>
  </div>
 
