--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <head>
-    <title>Cara Warner on Github</title>
+    <title>Melanie Toris on Github</title>
 
     <meta charset="utf-8" />
     <meta name="description" content="My personal page and playground." />
