--- a/index.html
+++ b/index.html
@@ -130,6 +130,14 @@
             </form>
  
            <div>
+               
+        <style>
+             canvas {
+                width: 500px;
+                height: 500px;
+                background-color: #0D0909;
+              } 
+       </style>
                <canvas id="pizarra"></canvas>
             </div>
             
