--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             
             </form>
        
-  <div       
+  <div>       
     <canvas id="draw" width="800" height="800"></canvas>
     <style>
        html, body {
