--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
        
   <div>       
     <canvas id="draw" width="800" height="800"></canvas>
-    <style="color: black;">
+    <style>
        html, body {
           margin:0;
        }
