--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
                </div>
             </div>
          
-        <div style="padding: 3%; text-align: left; margin: 2%; width: 300px; font-size: 24px;  background: -webkit-linear-gradient(#ffc780, #d59c);">
-            <form action="/action_page.php"> 
+        <div style="padding: 3%; text-align: left; margin: 2%; font-size: 24px;">
+            <form action="/action_page.php" style="background: -webkit-linear-gradient(#ffc780, #d59c); margin-right: 10px; padding: 40px; height: 200px; width: 300px;"> 
                   <label for="LOVE">What do you love?</label><br>
                   <input type="checkbox" id="love1" name="love1" value="Cat">
                   <label for="love1">Cats</label><br>
@@ -132,7 +132,7 @@
             
        <!-- Board-->
   <div>       
-    <canvas id="draw" width="800" height="800"></canvas>
+    <canvas id="draw" style="background-color: black; width: 700px; height: 400px;"></canvas>
     <style>
        html, body {
           margin:0;
