--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                </div>
             </div>
          
-        <div style="padding: 3%; text-align: left; margin: 2%; font-size: 24px;">
+        <div style="padding: 3%; text-align: left; font-size: 24px;">
             <form action="/action_page.php" style="background: -webkit-linear-gradient(#ffc780, #d59c); margin-right: 10px; padding: 40px; height: 200px; width: 300px;"> 
                   <label for="LOVE">What do you love?</label><br>
                   <input type="checkbox" id="love1" name="love1" value="Cat">
@@ -132,7 +132,7 @@
             
        <!-- Board-->
   <div>       
-    <canvas id="draw" style="background-color: black; width: 700px; height: 400px;"></canvas>
+    <canvas id="draw" width="700" height="500" style="background-color: black;  display: flex; align-items: center; left: 300px;  bottom: 210px;  margin: 10px;}"></canvas>
     <style>
        html, body {
           margin:0;
