--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             
             
        <!-- Board-->     
-    <canvas id="draw" width="800" height="800" style="background-color: black;  display: flex; align-items: center; left: 300px;  bottom: 210px;  margin: 10px;"></canvas>
+    <canvas id="draw" width="700px" height="400px" style="background-color: black;  display: flex; align-items: center; left: 300px;  bottom: 210px;  margin: 10px;"></canvas>
     <style>
        html, body {
           margin:0;
