--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ function showDivs(n) {
   }
   x[slideIndex-1].style.display = "block";
 }
-           
+ </div>
            
        <!-- Board-->     
     <canvas id="draw" width="700px" height="400px" style="background-color: black;  display: flex; align-items: center; left: 300px;  bottom: 210px;  margin: 10px;"></canvas>
