--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             
             </form>
             
-       <div class="w3-content w3-display-container">>
+       <div class="w3-content w3-display-container">
           <img class="mySlides" src="/Trying/img/pili1.jpg" style="width: 300px;"/> 
           <img class="mySlides" src="/Trying/img/pili2.jpg" style="width:100%"/>
           <img class="mySlides" src="/Trying/img/pili3.jpg" style="width:100%"/>
