--- a/index.html
+++ b/index.html
@@ -130,12 +130,12 @@
             </form>
             
        <div class="w3-content w3-display-container">
-          <img class="mySlides" src="/Trying/img/pili1.jpg" style="width: 300px; margin: 10px; right: 10px;"/> 
-          <img class="mySlides" src="/Trying/img/pili2.jpg" style="width: 300px; margin: 10px; right: 10px;"/>
-          <img class="mySlides" src="/Trying/img/pili3.jpg" style="width: 300px; margin: 10px; right: 10px;"/>
-          <img class="mySlides" src="/Trying/img/Kittens.jpg" style="width: 300px; margin: 10px; right: 10px;"/>
-          <img class="mySlides" src="/Trying/img/nina.jpg" style="width: 300px; margin: 10px; right: 10px;"/>
-          <img class="mySlides" src="/Trying/img/babys.jpg" style="width: 300px; margin: 10px; right: 10px;"/>
+          <img class="mySlides" src="/Trying/img/pili1.jpg" style="width: 300px; margin: 10px; right: 10px; height: 300px;"/> 
+          <img class="mySlides" src="/Trying/img/pili2.jpg" style="width: 300px; margin: 10px; right: 10px; height: 300px;"/>
+          <img class="mySlides" src="/Trying/img/pili3.jpg" style="width: 300px; margin: 10px; right: 10px; height: 300px;"/>
+          <img class="mySlides" src="/Trying/img/Kittens.jpg" style="width: 300px; margin: 10px; right: 10px; height: 300px;"/>
+          <img class="mySlides" src="/Trying/img/nina.jpg" style="width: 300px; margin: 10px; right: 10px; height: 300px;"/>
+          <img class="mySlides" src="/Trying/img/babys.jpg" style="width: 300px; margin: 10px; right: 10px; height: 300px;"/>
            
        <button class="w3-button w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
          <button class="w3-button w3-display-right" onclick="plusDivs(+1)">&#10095;</button> 
