--- a/index.html
+++ b/index.html
@@ -130,6 +130,8 @@
             </form>
             
        <div class="w3-content w3-display-container">
+           <div style="text-align: center; font-size: 50px; font-family: initial; font-style: oblique; color: #00BBF9; padding: 3%; margin: 4%; background: -webkit-linear-gradient(#feb67d, #e296c3 );">
+            My cats&#128571;
           <img class="mySlides" src="/Trying/img/pili1.jpg" style="width: 300px; margin: 10px; right: 10px; height: 300px;"/> 
           <img class="mySlides" src="/Trying/img/pili2.jpg" style="width: 300px; margin: 10px; right: 10px; height: 300px;"/>
           <img class="mySlides" src="/Trying/img/pili3.jpg" style="width: 300px; margin: 10px; right: 10px; height: 300px;"/>
