--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             </form>
             
        <div class="w3-content w3-display-container">
-           <p>My cats&#128571;</p>
+          <img class="mySlides" src="/Trying/img/Intro.jpg" style="width: 300px; margin: 10px; right: 10px; height: 300px;"/>
           <img class="mySlides" src="/Trying/img/pili1.jpg" style="width: 300px; margin: 10px; right: 10px; height: 300px;"/> 
           <img class="mySlides" src="/Trying/img/pili2.jpg" style="width: 300px; margin: 10px; right: 10px; height: 300px;"/>
           <img class="mySlides" src="/Trying/img/pili3.jpg" style="width: 300px; margin: 10px; right: 10px; height: 300px;"/>
